# affiliana-cli

./: .env.example  .env.test  .gitignore  README.md  conftest.py  docker-compose.test.yml  main.py  pyproject.toml  run_tests.py
.github/: run_tests.yml
.github/workflows/: run_tests.yml
app/: exceptions.py
app/commands/: __init__.py  ideation_commands.py  niche_research_commands.py  product_research_commands.py
app/domain/: __init__.py  ideation.py  niche_research.py  product_research.py  utils.py
app/exceptions/: __init__.py  data.py
app/repositories/: __init__.py  amazon_products_repository.py  base_repository.py  keywords_repository.py  niches_repository.py
config/: __init__.py  config.py  injector.py  logger.py
database/: alembic.ini  connection.py
database/__tests__/: test_connection.py
database/migrations/: env.py
database/models/: __init__.py  amazon_product.py  keyword.py  metrics_report.py  niche.py  niche_amazon_product.py  niche_keyword.py  serp_analysis.py  serp_analysis_item.py  suggestion_set.py  suggestion_set_keyword.py
docker/: docker-compose.test.yml  docker-compose.yml
integrations/: __init__.py  constants.py  retriable_http_client.py
integrations/__tests__/: test_retriable_http_client.py
integrations/amazon_search/: client.py  formatters.py
integrations/google_suggest/: client.py  constants.py  formatters.py
integrations/openai_api/: client.py  constants.py  formatters.py
monitoring/: __init__.py  constants.py  logger.py
scripts/: decorators.py  procedures.py  run.py  run_migrations.py  run_tests.py
(+69 files in other folders)
